# websocket_demo

backend/: pyproject.toml  server.py
frontend/: index.html
