[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Simon Funke <simon.funke@energima.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.4"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
